--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   http: ^0.13.4
   flutter_datetime_picker: ^1.5.1
   intl: ^0.17.0
+  speech_to_text: ^5.4.3
+  avatar_glow: ^2.0.2
 
 dev_dependencies:
   flutter_test:
